some style cleans