@@ -2,13 +2,13 @@ package edu.java.domain.jooqRepository;
 
 import edu.java.model.entity.Link;
 import edu.java.model.entity.TgChat;
-import edu.java.scrapper.IntegrationTest;
 import java.net.URI;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Stream;
+import edu.java.scrapper.JooqIntegrationTest;
 import org.assertj.core.api.AssertionsForInterfaceTypes;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,16 +16,11 @@ import org.springframework.test.annotation.Rollback;
 import org.springframework.transaction.annotation.Transactional;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
-class JooqLinkRepositoryTest extends IntegrationTest {
-
-    @Autowired
-    private JooqLinkRepository linkRepository;
-    @Autowired
-    private JooqTgChatRepository chatRepository;
+@Rollback
+@Transactional
+class JooqLinkRepositoryTest extends JooqIntegrationTest {
 
     @Test
-    @Rollback
-    @Transactional
     void insertLink() {
         Link link = new Link(
             URI.create("https://github.com/me/myRep"),
@@ -36,11 +31,11 @@ class JooqLinkRepositoryTest extends IntegrationTest {
         );
         TgChat chat1 = new TgChat(1L, "a");
         TgChat chat2 = new TgChat(2L, "a");
-        chat1 = chatRepository.insertTgChat(chat1).get();
-        chat2 = chatRepository.insertTgChat(chat2).get();
+        chat1 = jooqTgChatRepository.insertTgChat(chat1).get();
+        chat2 = jooqTgChatRepository.insertTgChat(chat2).get();
         link.setTgChats(Set.of(chat1, chat2));
 
-        Link res = linkRepository.insertLink(link).get();
+        Link res = jooqLinkRepository.insertLink(link).get();
 
         assertThat(res.getName()).isEqualTo(link.getName());
         assertThat(res.getUrl()).isEqualTo(link.getUrl());
@@ -49,8 +44,6 @@ class JooqLinkRepositoryTest extends IntegrationTest {
     }
 
     @Test
-    @Rollback
-    @Transactional
     void insertLinkShouldCreatesWithDifferentIds() {
         Link link = new Link(
             URI.create("https://github.com/me/myRep"),
@@ -61,20 +54,18 @@ class JooqLinkRepositoryTest extends IntegrationTest {
         );
         TgChat chat1 = new TgChat(1L, "a");
         TgChat chat2 = new TgChat(2L, "a");
-        chat1 = chatRepository.insertTgChat(chat1).get();
-        chat2 = chatRepository.insertTgChat(chat2).get();
+        chat1 = jooqTgChatRepository.insertTgChat(chat1).get();
+        chat2 = jooqTgChatRepository.insertTgChat(chat2).get();
         link.setTgChats(Set.of(chat1, chat2));
 
-        Link res1 = linkRepository.insertLink(link).get();
+        Link res1 = jooqLinkRepository.insertLink(link).get();
         link.setUrl(URI.create("https://github.com/me/myRep2"));    // bc url is unique in table
-        Link res2 = linkRepository.insertLink(link).get();
+        Link res2 = jooqLinkRepository.insertLink(link).get();
 
         assertThat(res1.getId()).isNotEqualTo(res2.getId());
     }
 
     @Test
-    @Rollback
-    @Transactional
     void insertLinkWithIdShouldIgnoreIt() {
         Link link = new Link(
             URI.create("https://github.com/me/myRep"),
@@ -84,17 +75,15 @@ class JooqLinkRepositoryTest extends IntegrationTest {
             OffsetDateTime.parse("2024-03-15T11:19:32+03:00")
         );
 
-        Link res1 = linkRepository.insertLink(link).get();
+        Link res1 = jooqLinkRepository.insertLink(link).get();
         link.setUrl(URI.create("https://github.com/me/myRep2"));    // bc url is unique in table
-        Link res2 = linkRepository.insertLink(link).get();
+        Link res2 = jooqLinkRepository.insertLink(link).get();
 
         // if ids not equal them not equal 111
         assertThat(res1.getId()).isNotEqualTo(res2.getId());
     }
 
     @Test
-    @Rollback
-    @Transactional
     void updateLink() {
         String oldName = "name1";
         String newName = "name2";
@@ -115,27 +104,25 @@ class JooqLinkRepositoryTest extends IntegrationTest {
         TgChat chat1 = new TgChat(1L, "a");
         TgChat chat2 = new TgChat(2L, "a");
         TgChat chat3 = new TgChat(3L, "a");
-        chat1 = chatRepository.insertTgChat(chat1).get();
-        chat2 = chatRepository.insertTgChat(chat2).get();
-        chat3 = chatRepository.insertTgChat(chat3).get();
+        chat1 = jooqTgChatRepository.insertTgChat(chat1).get();
+        chat2 = jooqTgChatRepository.insertTgChat(chat2).get();
+        chat3 = jooqTgChatRepository.insertTgChat(chat3).get();
         oldLink.setTgChats(Set.of(chat1, chat2));
         newLink.setTgChats(Set.of(chat3, chat2));
 
-        long id = linkRepository.insertLink(oldLink).get().getId();
+        long id = jooqLinkRepository.insertLink(oldLink).get().getId();
 
-        linkRepository.updateLink(id, newLink);
-        Link res = linkRepository.findLinkById(id).get();
+        jooqLinkRepository.updateLink(id, newLink);
+        Link res = jooqLinkRepository.findLinkById(id).get();
 
         assertThat(res.getName()).isEqualTo(newName);
 
-        assertThat(res.getTgChats().size()).isEqualTo(newLink.getTgChats().size());
-        assertThat(res.getTgChats().containsAll(newLink.getTgChats())).isTrue();
-        assertThat(newLink.getTgChats().containsAll(res.getTgChats())).isTrue();
+        AssertionsForInterfaceTypes.assertThat(res.getTgChats()).hasSize(newLink.getTgChats().size());
+        AssertionsForInterfaceTypes.assertThat(res.getTgChats()).containsAll(newLink.getTgChats());
+        AssertionsForInterfaceTypes.assertThat(newLink.getTgChats()).containsAll(res.getTgChats());
     }
 
     @Test
-    @Rollback
-    @Transactional
     void updateLinkWithWrongIdShouldReturnEmptyOptional() {
         long randomId = 11L;
         Link newLink = new Link(
@@ -146,14 +133,12 @@ class JooqLinkRepositoryTest extends IntegrationTest {
             OffsetDateTime.parse("2024-03-15T11:19:32+03:00")
         );
 
-        Optional<Link> res = linkRepository.updateLink(randomId, newLink);
+        Optional<Link> res = jooqLinkRepository.updateLink(randomId, newLink);
 
-        assertThat(res.isEmpty()).isTrue();
+        assertThat(res).isEmpty();
     }
 
     @Test
-    @Rollback
-    @Transactional
     void removeLinkByIdShouldReturnWhatItDeleted() {
         Link link = new Link(
             URI.create("https://github.com/me/myRep"),
@@ -162,31 +147,27 @@ class JooqLinkRepositoryTest extends IntegrationTest {
             OffsetDateTime.parse("2024-03-15T11:17:31+03:00"),
             OffsetDateTime.parse("2024-03-15T11:19:32+03:00")
         );
-        long id = linkRepository.insertLink(link).get().getId();
+        long id = jooqLinkRepository.insertLink(link).get().getId();
 
-        Optional<Link> removeRes = linkRepository.removeLinkById(id);
-        Optional<Link> findAfterRemoveRes = linkRepository.findLinkById(id);
+        Optional<Link> removeRes = jooqLinkRepository.removeLinkById(id);
+        Optional<Link> findAfterRemoveRes = jooqLinkRepository.findLinkById(id);
 
         assertThat(removeRes.get().getUrl()).isEqualTo(removeRes.get().getUrl());
-        assertThat(findAfterRemoveRes.isEmpty()).isTrue();
+        assertThat(findAfterRemoveRes).isEmpty();
     }
 
     @Test
-    @Rollback
-    @Transactional
     void removeLinkWithWrongIdShouldDoSimilarWithNullRemoveRes() {
         long id = 15L;
 
-        Optional<Link> removeRes = linkRepository.removeLinkById(id);
-        Optional<Link> findAfterRemoveRes = linkRepository.removeLinkById(id);
+        Optional<Link> removeRes = jooqLinkRepository.removeLinkById(id);
+        Optional<Link> findAfterRemoveRes = jooqLinkRepository.removeLinkById(id);
 
-        assertThat(removeRes.isEmpty()).isTrue();
-        assertThat(findAfterRemoveRes.isEmpty()).isTrue();
+        assertThat(removeRes).isEmpty();
+        assertThat(findAfterRemoveRes).isEmpty();
     }
 
     @Test
-    @Rollback
-    @Transactional
     void findLinkById() {
         Link link = new Link(
             URI.create("https://github.com/me/myRep"),
@@ -195,27 +176,23 @@ class JooqLinkRepositoryTest extends IntegrationTest {
             OffsetDateTime.parse("2024-03-15T11:17:31+03:00"),
             OffsetDateTime.parse("2024-03-15T11:19:32+03:00")
         );
-        long id = linkRepository.insertLink(link).get().getId();
+        long id = jooqLinkRepository.insertLink(link).get().getId();
 
-        Link res = linkRepository.findLinkById(id).get();
+        Link res = jooqLinkRepository.findLinkById(id).get();
 
         assertThat(res.getUrl()).isEqualTo(link.getUrl());
     }
 
     @Test
-    @Rollback
-    @Transactional
     void findLinkByWrongIdShouldReturnEmptyOptional() {
         long id = 123L;
 
-        Optional<Link> res = linkRepository.findLinkById(id);
+        Optional<Link> res = jooqLinkRepository.findLinkById(id);
 
-        assertThat(res.isEmpty()).isTrue();
+        assertThat(res).isEmpty();
     }
 
     @Test
-    @Rollback
-    @Transactional
     void findLinkByURL() {
         URI url = URI.create("https://github.com/me/myRep");
         Link link = new Link(
@@ -225,27 +202,23 @@ class JooqLinkRepositoryTest extends IntegrationTest {
             OffsetDateTime.parse("2024-03-15T11:17:31+03:00"),
             OffsetDateTime.parse("2024-03-15T11:19:32+03:00")
         );
-        linkRepository.insertLink(link);
+        jooqLinkRepository.insertLink(link);
 
-        Link res = linkRepository.findLinkByURL(url).get();
+        Link res = jooqLinkRepository.findLinkByURL(url).get();
 
         assertThat(res.getUrl()).isEqualTo(link.getUrl());
     }
 
     @Test
-    @Rollback
-    @Transactional
     void findLinkByUncreatedURL() {
         URI url = URI.create("https://github.com/me/myRep");
 
-        Optional<Link> res = linkRepository.findLinkByURL(url);
+        Optional<Link> res = jooqLinkRepository.findLinkByURL(url);
 
-        assertThat(res.isEmpty()).isTrue();
+        assertThat(res).isEmpty();
     }
 
     @Test
-    @Rollback
-    @Transactional
     void findAllTgChats() {
         int insertCount = 5;
         Link link = new Link(
@@ -257,16 +230,14 @@ class JooqLinkRepositoryTest extends IntegrationTest {
         );
 
         Stream.iterate(1, it -> it + 1).limit(insertCount)
-            .forEach(it -> linkRepository.insertLink(createLinkWithUniqueUrlWithNum(it)));
+            .forEach(it -> jooqLinkRepository.insertLink(createLinkWithUniqueUrlWithNum(it)));
 
-        List<Link> res = linkRepository.findAllLinks();
+        List<Link> res = jooqLinkRepository.findAllLinks();
 
-        assertThat(res.size()).isEqualTo(insertCount);
+        AssertionsForInterfaceTypes.assertThat(res).hasSize(insertCount);
     }
 
     @Test
-    @Rollback
-    @Transactional
     void findLinksByTgChatId() {
         Link link1 = new Link(
             URI.create("https://github.com/me/myRep1"),
@@ -284,23 +255,21 @@ class JooqLinkRepositoryTest extends IntegrationTest {
         );
         TgChat chat1 = new TgChat(11L, "a");
         TgChat chat2 = new TgChat(21L, "a");
-        chat1 = chatRepository.insertTgChat(chat1).get();
-        chat2 = chatRepository.insertTgChat(chat2).get();
+        chat1 = jooqTgChatRepository.insertTgChat(chat1).get();
+        chat2 = jooqTgChatRepository.insertTgChat(chat2).get();
         link1.setTgChats(Set.of(chat1, chat2));
         link2.setTgChats(Set.of(chat2));
 
-        link1 = linkRepository.insertLink(link1).get();
-        linkRepository.insertLink(link2).get();
+        link1 = jooqLinkRepository.insertLink(link1).get();
+        jooqLinkRepository.insertLink(link2).get();
 
-        List<Link> res = linkRepository.findLinksByTgChatId(chat1.getId());
+        List<Link> res = jooqLinkRepository.findLinksByTgChatId(chat1.getId());
 
         AssertionsForInterfaceTypes.assertThat(res).hasSize(1);
-        assertThat(res.get(0)).isEqualTo(link1);
+        assertThat(res.getFirst()).isEqualTo(link1);
     }
 
     @Test
-    @Rollback
-    @Transactional
     void removeLinksByTgChatId_linkWithoutChatsShouldToBeRemoved() {
         Link link1 = new Link(
             URI.create("https://github.com/me/myRep1"),
@@ -318,26 +287,24 @@ class JooqLinkRepositoryTest extends IntegrationTest {
         );
         TgChat chat1 = new TgChat(1L, "a");
         TgChat chat2 = new TgChat(2L, "a");
-        chat1 = chatRepository.insertTgChat(chat1).get();
-        chat2 = chatRepository.insertTgChat(chat2).get();
+        chat1 = jooqTgChatRepository.insertTgChat(chat1).get();
+        chat2 = jooqTgChatRepository.insertTgChat(chat2).get();
         link1.setTgChats(Set.of(chat1, chat2));
         link2.setTgChats(Set.of(chat2));
 
-        link1 = linkRepository.insertLink(link1).get();
-        linkRepository.insertLink(link2).get();
+        link1 = jooqLinkRepository.insertLink(link1).get();
+        jooqLinkRepository.insertLink(link2).get();
 
-        linkRepository.removeLinksByTgChatId(chat2.getId());
-        List<Link> res = linkRepository.findAllLinks();
+        jooqLinkRepository.removeLinksByTgChatId(chat2.getId());
+        List<Link> res = jooqLinkRepository.findAllLinks();
         // link2 should be removed bc only chat tracked it
         link1.setTgChats(Set.of(chat1));   // for clean equals (chat2 was removed)
 
-        assertThat(res.size()).isEqualTo(1);
-        assertThat(res.get(0)).isEqualTo(link1);
+        AssertionsForInterfaceTypes.assertThat(res).hasSize(1);
+        assertThat(res.getFirst()).isEqualTo(link1);
     }
 
     @Test
-    @Rollback
-    @Transactional
     void findAllWhereLastCheckTimeBefore() {
         OffsetDateTime needLastCheckTime = OffsetDateTime.parse("2024-03-15T11:17:31+03:00");
         Link checkedLink = new Link(
@@ -355,13 +322,13 @@ class JooqLinkRepositoryTest extends IntegrationTest {
             needLastCheckTime.minusDays(1)
         );
 
-        linkRepository.insertLink(checkedLink).get();
-        uncheckedLink = linkRepository.insertLink(uncheckedLink).get();
+        jooqLinkRepository.insertLink(checkedLink).get();
+        uncheckedLink = jooqLinkRepository.insertLink(uncheckedLink).get();
 
-        List<Link> res = linkRepository.findAllWhereLastCheckTimeBefore(needLastCheckTime);
+        List<Link> res = jooqLinkRepository.findAllWhereLastCheckTimeBefore(needLastCheckTime);
 
-        assertThat(res.size()).isEqualTo(1);
-        assertThat(res.get(0)).isEqualTo(uncheckedLink);
+        AssertionsForInterfaceTypes.assertThat(res).hasSize(1);
+        assertThat(res.getFirst()).isEqualTo(uncheckedLink);
     }
 
     private Link createLinkWithUniqueUrlWithNum(int num) {
